--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -71,7 +71,20 @@
                         </button>
                     </ng-template>
             </div>
-
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg">
+                        <button (click)="apagarTodo()" class="btn btn-primary ripple-surface mb-5" >
+                            Apagar todo
+                        </button>
+                    </div>
+                    <div class="col-lg">
+                        <button (click)="encenderTodo()" class="btn btn-primary ripple-surface mb-5" >
+                            Encender todo
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="col-lg">
