--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -96,7 +96,11 @@
                     {{btnText}}
                 </button>
             </div>
-            
+            <div>
+                <button (click)="toogleStream()" class="btn btn-primary ripple-surface mb-5" >
+                    {{Stream}}
+                </button>
+            </div>
         </div>
     
       </div>
