--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <div class="center">
-        <h3>Sistema de control automático de una casa inteligentse</h3>
+        <h3>Sistema de control automático de una casa inteligente</h3>
     </div>
 
     <div class="container-fluid">
@@ -98,7 +98,7 @@
             </div>
             <div>
                 <button (click)="toogleStream()" class="btn btn-primary ripple-surface mb-5" >
-                    {{Stream}}
+                    Stream
                 </button>
             </div>
         </div>
